# Chip8Emulator

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CmakeLists.txt  README  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml  cmake.yml  tests.yml
include/: emulator.h  emulator_impl.h  export.h  gamefile.h  iinput_command.h  input_type.h  irandom_generator.h  keys.h  renderer.h
include/sdl/: emulator_random_generator.h  keyboardstate_input_command.h  loader.h  sdl_emu_renderer.h  sdl_input.h
src/: emulator.cpp  emulator_impl.cpp  main.cpp
src/sdl/: emulator_random_generator.cpp  keyboardstate_input_command.cpp  loader.cpp  sdl_emu_renderer.cpp  sdl_input.cpp
tests/: mocks.h  test_emulator.cpp
